mitch is going through puberty